# scrapper

./: pyproject.toml
app/templates/: index.html
