[tool.poetry]
name = "scrapper"
version = "0.1.0"
description = ""
authors = ["HGTech96 <gumroyan96@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg2 = "^2.9.5"
SQLAlchemy = "^1.4.44"
Flask = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
